--- a/aedes.html
+++ b/aedes.html
@@ -3,7 +3,7 @@
 <head>
   <link rel="stylesheet" href="/style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Itim" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Niramit" rel="stylesheet">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -20,7 +20,7 @@
     <table style='margin-bottom: 20px;'>
       <tr><td class="index">
         ยุงเป็นพาหะโรคใดบ้าง?
-      <tr><td style="padding: 10px;"><a class='order'>ยุงลาย</a> ไข้เลือดออก ชิคุนกุนยา ไข้เหลือง <br>ไข้ซิก้า 
+      <tr><td style="padding: 10px;"><a class='order'>ยุงลาย</a> ไข้เลือดออก ชิคุนกุนยา  <br>ไข้เหลือง ไข้ซิก้า 
       </td></tr>
       <tr><td><img class="mosquito-image" src="/img/aedes.webp">
       </td></tr>
