--- a/calculator.html
+++ b/calculator.html
@@ -3,7 +3,7 @@
 <head>
   <link rel="stylesheet" href="/style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Itim" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Niramit" rel="stylesheet">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -46,7 +46,8 @@
   </table>
 
   </div>
-  <div id="calculating-zone"></div>
+  <div id="calculating-zone">
+  </div>
   <p id="alert-zone"></p>
   <p2 style="margin-bottom: 10px;">คำถามที่พบบ่อย &#9758;<a href="problem.html">กดที่นี่</a>&#9756;
   </p2>
