--- a/3keb.html
+++ b/3keb.html
@@ -17,6 +17,12 @@
     </table>
   </h1>
   <p class="info">
+    <table style='margin-bottom: 20px;'>
+      <tr><td class="info" style="padding: 10px;">
+        <a class='order'>ป้องกัน 3 โรคจากยุง</a> คือ<br>
+        โรคไข้เลือดออก โรคไข้ปวดข้อยุงลาย โรคติดเชื้อไวรัสซิกา
+    </td></tr>
+    </table>
     <table class="info" style='margin-bottom: 20px;'>
         <tr><td style="padding: 10px;"><a class='order'>เก็บบ้าน</a>ให้ปลอดโปร่ง ไม่ให้ยุงเกาะพัก
         </td></tr>
