--- a/DHF.html
+++ b/DHF.html
@@ -13,13 +13,13 @@
   <div class="blank"></div>
   <h1 style="margin-bottom: 0px;">
     <table>
-      <tr><td>&#129439;โรคไข้เลือดออกเดงกี่<br>(Dengue fever)&#129656;</td></tr>
+      <tr><td>&#129439;โรคไข้เลือดออก (Dengue Fever & <br>Dengue Hemorrhagic Fever)&#129656;</td></tr>
     </table>
   </h1>
   <p class="info">
     <table class="info" style='margin-bottom: 20px;'>
     <tr><td>
-      โรคไข้เลือดออกเดงกี เป็นโรคติดเชื้อไวรัสเดงกีที่มียุงลายเป็นแมลงนำโรค 
+      โรคไข้เลือดออก เป็นโรคติดเชื้อไวรัสเดงกีที่มียุงลายเป็นแมลงนำโรค 
       โรคนี้ได้กลายเป็นปัญหาสาธารณสุขในหลายประเทศทั่วโลก 
       เนื่องจากโรคได้แพร่กระจายอย่างกว้างขวางและจำนวนผู้ป่วยเพิ่มขึ้นอย่างมากใน 30 
       ปีที่ผ่านมา มากกว่า 100 ประเทศที่โรคนี้กลายเป็นโรคประจำถิ่น 
@@ -44,9 +44,26 @@
       อาการของโรคไข้เลือดออก
     </td></tr>
     <tr><td style="padding: 10px;">
-      หลังจากที่ถูกกัดประมาณ 3-8 วัน ก็จะเริ่มมีอาการของไข้เลือดออกเกิดขึ้น ดังนี้</td></tr>
+      หลังจากได้รับเชื้อจากยุงประมาณ 5-8 วัน ผู้ป่วยจะมีอาการแบ่งตามชนิดของไข้เลือดออก ดังนี้</td></tr>
+    <tr><td><a class="order">โรคไข้เดงกี่ (Dengue Fever: DF)</a></td></tr>
     <tr><td style="padding: 10px;">
-      <a class="order">1.</a>ตรวจสอบวันหมดอายุและสภาพถุงทรายอะเบทก่อนใช้งาน</td></tr>
+      ปวดศีรษะ ปวดกระบอกตา ปวดเมื่อยตามตัว ปวดข้อหรือกระดูก มีผื่นขึ้นคล้ายผื่นของโรคหัด และอาจมีภาวะเลือดออกหรือไม่มีก็ได้
+    <tr><td><a class="order">โรคไข้เลือดออกเดงกี่ (Dengue Hemorrhagic Fever: DHF)</a></td></tr>
+    <tbody style="text-align: left;">
+    <tr><td>
+      <a class="order">1.</a>มีไข้สูงเฉียบพลันเกิน 38 องศาเซลเซียสประมาณ 2-7 วัน</td></tr>
+      <tr><td>
+      <a class="order">2.</a>คลื่นไส้ อาเจียน เบื่ออาหาร</td></tr>
+    <tr><td>
+      <a class="order">3.</a>หน้าแดง อาจพบจ้ำเลือดหรือจุดเลือดออกสีแดงเล็กๆ ตามผิวหนัง หรือมีเลือดออกบริเวณอื่น 
+      เช่น เลือดกำเดาไหล เลือดออกตามไรฟัน ปัสสาวะ อุจจาระมีเลือดปน</td></tr>
+    <tr><td>
+      <a class="order">4.</a>ปวดท้องอย่างรุนแรง กดเจ็บชายโครงด้านขวา ตับอักเสบ</td></tr>
+    <tr><td>
+      <a class="order">5.</a>ในรายที่มีอาการรุนแรงมาก หลังจากมีไข้มาแล้วหลายวันผู้ป่วยอาจเกิดภาวะการไหลเวียนโลหิตล้มเหลวหรือภาวะช็อก 
+      และเข้าสู่ระยะที่เรียกว่า กลุ่มอาการไข้เลือดออกช็อก (Dengue Shock Syndrome) โดยผู้ป่วยจะมีอาการกระสับกระส่าย ปลายมือปลายเท้าเย็น ปัสสาวะน้อยลง 
+      ไข้ลดลงอย่างรวดเร็ว ความดันโลหิตลดต่ำ วัดชีพจรไม่ได้</td></tr>
+    </tbody>
   </table>
   <a>ที่มาของข้อมูล : กรมควบคุมโรค กระทรวงสาธารณสุข</a>
   </p>
