--- a/DHF.html
+++ b/DHF.html
@@ -55,7 +55,7 @@
       <tr><td>
       <a class="order">2.</a>คลื่นไส้ อาเจียน เบื่ออาหาร</td></tr>
     <tr><td>
-      <a class="order">3.</a>หน้าแดง อาจพบจ้ำเลือดหรือจุดเลือดออกสีแดงเล็กๆ ตามผิวหนัง หรือมีเลือดออกบริเวณอื่น 
+      <a class="order">3.</a>หน้าแดง อาจพบจ้ำเลือดหรือจุดเลือดออกสีแดงเล็ก ๆ ตามผิวหนัง หรือมีเลือดออกบริเวณอื่น 
       เช่น เลือดกำเดาไหล เลือดออกตามไรฟัน ปัสสาวะ อุจจาระมีเลือดปน</td></tr>
     <tr><td>
       <a class="order">4.</a>ปวดท้องอย่างรุนแรง กดเจ็บชายโครงด้านขวา ตับอักเสบ</td></tr>
@@ -64,6 +64,27 @@
       และเข้าสู่ระยะที่เรียกว่า กลุ่มอาการไข้เลือดออกช็อก (Dengue Shock Syndrome) โดยผู้ป่วยจะมีอาการกระสับกระส่าย ปลายมือปลายเท้าเย็น ปัสสาวะน้อยลง 
       ไข้ลดลงอย่างรวดเร็ว ความดันโลหิตลดต่ำ วัดชีพจรไม่ได้</td></tr>
     </tbody>
+  </table>
+  <table class="info" style='margin-bottom: 20px;'>
+    <tr><td class="index">
+      อาการอันตรายที่ควรเฝ้าระวัง
+    </td></tr>
+    <tbody style="text-align: left;">
+      <tr><td>
+        <a class="order">1.</a>มีอาการซึม อ่อนเพลียมาก</td></tr>
+        <tr><td>
+        <a class="order">2.</a>กระสับกระส่าย มือเท้าเย็น</td></tr>
+      <tr><td>
+        <a class="order">3.</a>ชีพจรเต้นเบา เร็ว</td></tr>
+      <tr><td>
+        <a class="order">4.</a>ปวดท้องกะทันหัน</td></tr>
+      <tr><td>
+        <a class="order">5.</a>กระหายน้ำ ปัสสาวะน้อยลง</td></tr>
+      <tr><td>
+        <a class="order">6.</a>คลื่นไส้ อาเจียน เบื่ออาหาร</td></tr>
+      <tr><td>
+        <a class="order">7.</a>มีเลือดกำเดาไหล อาเจียนเป็นเลือด อุจจาระเป็นสีดำ</td></tr>
+      </tbody>
   </table>
   <a>ที่มาของข้อมูล : กรมควบคุมโรค กระทรวงสาธารณสุข</a>
   </p>
