--- a/abate.html
+++ b/abate.html
@@ -26,8 +26,8 @@
         ของยุงลายตามบ้านเรือน
     </td></tr>
     </table>
-    <table style='margin-bottom: 20px;'>
-    <tr><td class="index">
+    <table style='margin-bottom: 10px;'>
+    <tr><td class="index" style="padding: 10px;">
         สรรพคุณ
     </td></tr>
     <tr><td style="padding-top: 10px;">ใช้เพื่อกำจัดลูกน้ำยุงลาย
@@ -50,8 +50,8 @@
       <img class="mosquito-image" src="/img/gram.png"></td></tr><tr><td style='padding: 10px;'>
       <a class="order">3.</a>ใส่ในภาชนะที่ใส่น้ำใช้ในอัตรา 1 กรัมต่อน้ำ 10 ลิตรหรือโรยในขาตู้กันมด แจกัน</td></tr>
     </table>
-  <table style='margin-bottom: 20px;'>
-    <tr><td class="index">
+  <table style='margin-bottom: 10px;'>
+    <tr><td class="index" style="padding: 10px;">
       ตัวอย่างทรายอะเบท
     <tr><td style="padding: 10px;"><a class='order'>กรีนฟอส (Greenphos)</a>
     </td></tr>
