--- a/abate.html
+++ b/abate.html
@@ -18,8 +18,8 @@
   </h1>
   <p class="info">
     <table style='margin-bottom: 20px;'>
-      <tr><td class="info" style="padding: 10px;">
-        ทรายอะเบท” (Abate) เป็นชื่อทางการค้าของผลิตภัณฑ์ทรายกำจัดลูกน้ำยี่ห้อหนึ่ง 
+      <tr><td class="info text-box" style="padding: 10px;">
+        "ทรายอะเบท" (Abate) เป็นชื่อทางการค้าของผลิตภัณฑ์ทรายกำจัดลูกน้ำยี่ห้อหนึ่ง 
         หมายถึงทรายที่ถูกเคลือบด้วยสารเคมีพวกอะเบท 
         (เป็นสารประกอบที่มีฟอสฟอรัสเป็นองค์ประกอบ) 
         ซึ่งทางกระทรวงสาธารณสุขได้นำมาใช้ในการกำจัดลูกน้ำ
@@ -30,7 +30,7 @@
     <tr><td class="index" style="padding: 10px;">
         สรรพคุณ
     </td></tr>
-    <tr><td style="padding-top: 10px;">ใช้เพื่อกำจัดลูกน้ำยุงลาย
+    <tr><td class="text-box" style="padding-top: 10px;">ใช้เพื่อกำจัดลูกน้ำยุงลาย
          ซึ่งจะเป็นอีกทางที่จะป้องกันมิให้เกิดการระบาดของโรคไข้เลือดออก
          ซึ่งมียุงลายเป็นพาหะ ทั้งนี้จะป้องกันไม่ให้เกิดลูกน้ำได้นานประมาณ
           3 เดือน (ต่อการใช้ 1 ครั้ง)
@@ -42,7 +42,7 @@
       วิธีใช้งานทรายอะเบท
     </td></tr>
   </table>
-  <table class="info">
+  <table class="info text-box">
     <tr><td style="padding: 10px;">
       <a class="order">1.</a>ตรวจสอบวันหมดอายุและสภาพถุงทรายอะเบทก่อนใช้งาน</td></tr><tr><td>
       <img class="mosquito-image" src="/img/temephos.png"></td></tr><tr><td style="padding: 10px;">
@@ -53,6 +53,9 @@
   <table style='margin-bottom: 10px;'>
     <tr><td class="index" style="padding: 10px;">
       ตัวอย่างทรายอะเบท
+  </td></tr>
+  </table>
+  <table class="text-box">
     <tr><td style="padding: 10px;"><a class='order'>กรีนฟอส (Greenphos)</a>
     </td></tr>
     <tr><td><img class="mosquito-image" src="/img/greenphos.png">
