--- a/aedes.html
+++ b/aedes.html
@@ -20,6 +20,9 @@
     <table style='margin-bottom: 20px;'>
       <tr><td class="index">
         ยุงเป็นพาหะโรคใดบ้าง?
+    </td></tr>
+    </table>
+    <table class="text-box">
       <tr><td style="padding: 10px;"><a class='order'>ยุงลาย</a> ไข้เลือดออก ชิคุนกุนยา  <br>ไข้เหลือง ไข้ซิก้า 
       </td></tr>
       <tr><td><img class="mosquito-image" src="/img/aedes.webp">
@@ -40,6 +43,8 @@
     <table style='margin-bottom: 20px;'>
       <tr><td class="index">
         วัฏจักรของยุง
+      </td></tr></table>
+      <table class="text-box">
       <tr><td style="padding-top: 10px;">ยุงมีการเปลี่ยนแปลงรูปร่าง 4 ระยะ คือ ระยะไข่ (egg) ระยะลูกน้ำ (larva) ระยะตัวโม่ง (pupa) และระยะตัวเต็มวัย (adult)
       </td></tr>
       <tr><td><img id="cycle-image" src="/img/cycle.gif">
@@ -66,7 +71,7 @@
       <tr><td><img class="mosquito-image" src="/img/pupa.jpg">
       </td></tr>
       <tr><td style="padding: 10px;"><a class='order'>ระยะตัวเต็มวัย (adult)</a>ลักษณะของยุงแบ่งออกเป็น 3 ส่วน ได้แก่ <br>ส่วนหัว ส่วนอก 
-        และส่วนท้อง ซึ่งยุงแต่ละชนิดจะมีลักษณะที่สำคัญแตกต่าง
+        และส่วนท้อง ซึ่งยุงแต่ละชนิดจะมีลักษณะที่สำคัญแตกต่างกัน
       </td></tr>
       <tr><td><img class="mosquito-image" src="/img/aedes.webp">
       </td></tr>
