--- a/problem.html
+++ b/problem.html
@@ -16,7 +16,7 @@
           <tr><td>&#10067;คำถามที่พบบ่อย&#129300;</td></tr>
         </table>
     </h1>
-    <table id="question-zone">
+    <table id="question-zone" class="text-box">
         <tr><td><a style="color:crimson; font-size: larger;">ถาม</a> ทรายอะเบทอยู่ได้นานแค่ไหน?
         </td></tr>
         <tr><td style="padding-bottom: 20px;"><a style="color:limegreen; font-size: larger;">ตอบ</a> นานประมาณ 3 เดือน ต่อการใช้ 1 ครั้ง
