--- a/DHF.html
+++ b/DHF.html
@@ -13,11 +13,11 @@
   <div class="blank"></div>
   <h1 style="margin-bottom: 0px;">
     <table>
-      <tr><td>&#129439;โรคไข้เลือดออก (Dengue Fever & <br>Dengue Hemorrhagic Fever)&#129656;</td></tr>
+      <tr><td>&#129439;โรคไข้เลือดออก <br>(Dengue Fever & <br>Dengue Hemorrhagic Fever)&#129656;</td></tr>
     </table>
   </h1>
   <p class="info">
-    <table class="info" style='margin-bottom: 20px;'>
+    <table class="info text-box" style='margin-bottom: 20px;'>
     <tr><td>
       โรคไข้เลือดออก เป็นโรคติดเชื้อไวรัสเดงกีที่มียุงลายเป็นแมลงนำโรค 
       โรคนี้ได้กลายเป็นปัญหาสาธารณสุขในหลายประเทศทั่วโลก 
@@ -28,11 +28,11 @@
       ซึ่งร้อยละ 70 ของผู้ป่วยทั้งหมดมาจากประเทศในภูมิภาคเอเชีย
     </td></tr>
   </table>
-  <table class="info" style='margin-bottom: 20px;'>
+  <table style='margin-bottom: 20px;'>
     <tr><td class="index">
       วิธีการติดต่อ
     </td></tr>
-    <tr><td style="padding-top: 10px;">โรคไข้เลือดออกไม่สามารถติดต่อจากคนสู่คนได้โดยตรง 
+    <tr><td class="text-box" style="padding-top: 10px;">โรคไข้เลือดออกไม่สามารถติดต่อจากคนสู่คนได้โดยตรง 
       ต้องอาศัยยุงลายเป็นพาหะนำโรค การติดต่อจึงต้องใช้เวลาในผู้ป่วยและในยุง 
       ระยะที่ผู้ป่วยสามารถแพร่เชื้อได้คือ 2 วันก่อนถึง 6 วันหลังวันที่เริ่มแสดงอาการ 
       และเมื่อยุงได้รับเชื้อไวรัสเดงกีจากผู้ป่วยจะใช้เวลาประมาณ 8 - 12 วันในการเพิ่มจำนวนเชื้อไวรัสจนมากพอ 
@@ -43,11 +43,13 @@
     <tr><td class="index">
       อาการของโรคไข้เลือดออก
     </td></tr>
+    </table>
+    <table class="text-box">
     <tr><td style="padding: 10px;">
       หลังจากได้รับเชื้อจากยุงประมาณ 5-8 วัน ผู้ป่วยจะมีอาการแบ่งตามชนิดของไข้เลือดออก ดังนี้</td></tr>
     <tr><td><a class="order">โรคไข้เดงกี่ (Dengue Fever: DF)</a></td></tr>
     <tr><td style="padding: 10px;">
-      ปวดศีรษะ ปวดกระบอกตา ปวดเมื่อยตามตัว ปวดข้อหรือกระดูก มีผื่นขึ้นคล้ายผื่นของโรคหัด และอาจมีภาวะเลือดออกหรือไม่มีก็ได้
+      ปวดศีรษะ ปวดกระบอกตา ปวดเมื่อยตามตัว ปวดข้อหรือกระดูก มีผื่นขึ้นคล้ายผื่นของโรคหัด และอาจมีภาวะเลือดออกหรือไม่มีก็ได้</td></tr>
     <tr><td><a class="order">โรคไข้เลือดออกเดงกี่ (Dengue Hemorrhagic Fever: DHF)</a></td></tr>
     <tbody style="text-align: left;">
     <tr><td>
@@ -69,7 +71,7 @@
     <tr><td class="index">
       อาการอันตรายที่ควรเฝ้าระวัง
     </td></tr>
-    <tbody style="text-align: left;">
+    <tbody class="text-box" style="text-align: left;">
       <tr><td>
         <a class="order">1.</a>มีอาการซึม อ่อนเพลียมาก</td></tr>
         <tr><td>
