--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <tr><td><button class='knowledge-button info' onclick="goToPage(4)">5ป 1ข ปราบยุงลาย ป้องกันไข้เลือดออก</button></td></tr>
     <tr><td><button class='knowledge-button info' onclick="goToPage(6)">3 เก็บ ป้องกัน 3 โรค</button></td></tr>
     <tr><td><button class='knowledge-button info' onclick="goToPage(5)">ข้อมูลทรายอะเบท</button></td></tr>
+    <tr><td><button class='knowledge-button info' onclick="goToPage(7)">คำถามที่พบบ่อย</button></td></tr>
   </table>
 </p>
 <footer>
