--- a/aedes.html
+++ b/aedes.html
@@ -44,7 +44,7 @@
       <tr><td class="index">
         วัฏจักรของยุง
       </td></tr></table>
-      <table class="text-box">
+      <table class="info text-box">
       <tr><td style="padding-top: 10px;">ยุงมีการเปลี่ยนแปลงรูปร่าง 4 ระยะ คือ ระยะไข่ (egg) ระยะลูกน้ำ (larva) ระยะตัวโม่ง (pupa) และระยะตัวเต็มวัย (adult)
       </td></tr>
       <tr><td><img id="cycle-image" src="/img/cycle.gif">
