--- a/problem.html
+++ b/problem.html
@@ -59,8 +59,7 @@
         <tr><td style="text-align: center; padding: 10px;">------------------------</td></tr>
         <tr><td><a style="font-weight: bold;">7. </a><a style="color:crimson; font-size: larger;">ถาม</a> เว็บไซต์มีปัญหา?
         </td></tr>
-        <tr><td style="padding-bottom: 20px;"><a style="color:limegreen; font-size: larger;">ตอบ</a> ติดต่อได้ที่
-          <br>โรงพยาบาลส่งเสริมสุขภาพตำบลบ้านเซิด
+        <tr><td style="padding-bottom: 20px;"><a style="color:limegreen; font-size: larger;">ตอบ</a> ติดต่อได้ที่ รพ.สต.บ้านเซิด
         </td></tr>
     </table>
     <footer>
