--- a/DHF.html
+++ b/DHF.html
@@ -13,7 +13,7 @@
   <div class="blank"></div>
   <h1 style="margin-bottom: 0px;">
     <table>
-      <tr><td>&#129439;โรคไข้เลือดออก <br>(Dengue Fever & <br>Dengue Hemorrhagic Fever)&#129656;</td></tr>
+      <tr><td>&#129439;โรคไข้เลือดออก <br><a style="font-size: 60%;">(Dengue Fever & Dengue Hemorrhagic Fever)</a>&#129656;</td></tr>
     </table>
   </h1>
   <p class="info">
@@ -32,7 +32,7 @@
     <tr><td class="index">
       วิธีการติดต่อ
     </td></tr>
-    <tr><td class="text-box" style="padding-top: 10px;">โรคไข้เลือดออกไม่สามารถติดต่อจากคนสู่คนได้โดยตรง 
+    <tr><td class="info text-box" style="padding-top: 10px;">โรคไข้เลือดออกไม่สามารถติดต่อจากคนสู่คนได้โดยตรง 
       ต้องอาศัยยุงลายเป็นพาหะนำโรค การติดต่อจึงต้องใช้เวลาในผู้ป่วยและในยุง 
       ระยะที่ผู้ป่วยสามารถแพร่เชื้อได้คือ 2 วันก่อนถึง 6 วันหลังวันที่เริ่มแสดงอาการ 
       และเมื่อยุงได้รับเชื้อไวรัสเดงกีจากผู้ป่วยจะใช้เวลาประมาณ 8 - 12 วันในการเพิ่มจำนวนเชื้อไวรัสจนมากพอ 
@@ -44,7 +44,7 @@
       อาการของโรคไข้เลือดออก
     </td></tr>
     </table>
-    <table class="text-box">
+  <table class="info text-box">
     <tr><td style="padding: 10px;">
       หลังจากได้รับเชื้อจากยุงประมาณ 5-8 วัน ผู้ป่วยจะมีอาการแบ่งตามชนิดของไข้เลือดออก ดังนี้</td></tr>
     <tr><td><a class="order">โรคไข้เดงกี่ (Dengue Fever: DF)</a></td></tr>
