--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <script src="/script.js"></script>
 <h1 style="margin-bottom: -10px;">
-  <table><tr><td>ชื่อนวัตกรรม</td></tr></table>
+  <table><tr><td>Sin Cos(Cross) Yung</td></tr></table>
 </h1>
 <p class="info">
   <button id='main-button' onclick="goToPage(1)">&#129699; เครื่องมือวัดปริมาณทรายอะเบท &#128208;</button>
