--- a/DHF.html
+++ b/DHF.html
@@ -3,6 +3,7 @@
 <head>
   <link rel="stylesheet" href="/style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link rel="shortcut icon" type="image/x-icon" href="/img/web-logo.ico">
   <link href="https://fonts.googleapis.com/css2?family=Niramit" rel="stylesheet">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -86,6 +87,21 @@
         <a class="order">6.</a>คลื่นไส้ อาเจียน เบื่ออาหาร</td></tr>
       <tr><td>
         <a class="order">7.</a>มีเลือดกำเดาไหล อาเจียนเป็นเลือด อุจจาระเป็นสีดำ</td></tr>
+      </tbody>
+  </table>
+  <table class="info" style='margin-bottom: 20px;'>
+    <tr><td class="index">
+      แนวทางปฏิบัติเมื่อเป็นไข้เลือดออก
+    </td></tr>
+    <tbody class="text-box" style="text-align: left;">
+      <tr><td>
+        <a class="order">1.</a>หากมีไข้ ควรเช็ดตัวลดไข้หรืออาบน้ำลดไข้อยู่เสมอและกินยาลดไข้ เช่น พาราเซตามอล ทุก ๆ 4 - 6 ชั่วโมง</td></tr>
+        <tr><td>
+        <a class="order">2.</a>ดื่มน้ำให้เพียงพอ</td></tr>
+      <tr><td>
+        <a class="order">3.</a>หลีกเลี่ยงการกินอาหารที่มีสีแดงและสีดำ</td></tr>
+      <tr><td>
+        <a class="order">4.</a>ไม่ควรซื้อยารับประทานเอง ให้รับประทานยาตามที่แพทย์สั่งให้เท่านั้น</td></tr>
       </tbody>
   </table>
   <a>ที่มาของข้อมูล : กรมควบคุมโรค กระทรวงสาธารณสุข</a>
