--- a/index.html
+++ b/index.html
@@ -3,15 +3,14 @@
 <head>
   <link rel="stylesheet" href="/style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link rel="shortcut icon" type="image/x-icon" href="/img/web-logo.ico">
   <link href="https://fonts.googleapis.com/css2?family=Niramit" rel="stylesheet">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 <script src="/script.js"></script>
-<h1 style="margin-bottom: -10px;">
-  <table><tr><td>Sin Cos(Cross) Yung</td></tr></table>
-</h1>
+<img  id="logo-image" style="margin-bottom: -10px;" src="/img/logo.png">
 <p class="info">
   <button id='main-button' onclick="goToPage(1)">&#129699; เครื่องมือวัดปริมาณทรายอะเบท &#128208;</button>
   <table style="padding: 10px; background-color: rgba(255, 186, 186, 0.368); border-radius: 10px;">
