--- a/calculator.html
+++ b/calculator.html
@@ -3,6 +3,7 @@
 <head>
   <link rel="stylesheet" href="/style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link rel="shortcut icon" type="image/x-icon" href="/img/web-logo.ico">
   <link href="https://fonts.googleapis.com/css2?family=Niramit" rel="stylesheet">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
