--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
     <tr><td><button class='knowledge-button info' onclick="goToPage(7)">คำถามที่พบบ่อย</button></td></tr>
   </table>
 </p>
-<div>
+<div style="margin-bottom: 20px; border: solid 2px; padding: 10px; background-color: rgba(255, 137, 137, 0.368); border-radius: 10px;">
   <!-- hitwebcounter Code START -->
+<a style="padding: 0px 5px 0px 5px; background-color: white; border-radius: 10px;">จำนวนผู้เข้าชม<br></a>
 <a href="https://www.hitwebcounter.com" target="_blank">
   <img src="https://hitwebcounter.com/counter/counter.php?page=10143105&style=0038&nbdigits=5&type=page&initCount=0" title="Counter Widget" Alt="Visit counter For Websites" border="0"/></a>     
 </div>
